# html-shot

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  composer.json  htmlshot  phpstan.neon.dist
.github/workflows/: build-libs.yml  ci.yml  release.yml
docs/: README.md  advanced.md  fonts-and-styles.md  getting-started.md
examples/: README.md  common.php  regenerate.php
examples/banner/: banner.php
examples/changelog/: changelog.php
examples/event/: event.php
examples/event-card/: event-card.php  styles.css
examples/htmlshot/: htmlshot.php
examples/htmlshot-promo/: htmlshot-promo.php
examples/line-chart/: line-chart.php
examples/quote/: quote.php
examples/repository/: repository.php
examples/simple/: simple.php
examples/stars/: stars.php
examples/tailwind/: tailwind.php
include/: takumi_php.h
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: error.rs  lib.rs
rust/src/ffi/: context.rs  handles.rs  mod.rs  output.rs  render.rs
rust/src/internal/: html.rs  mod.rs
src/HtmlShot/: Context.php  Ffi.php  Font.php  HtmlShot.php  Renderer.php  TakumiFfi.php
src/HtmlShot/Composer/: Installer.php  Platform.php
src/HtmlShot/Console/: InstallCommand.php  NativeLibraryInstaller.php  UpdateCommand.php
src/HtmlShot/Exception/: RuntimeException.php
tests/Integration/: BackgroundImageTest.php  FontTest.php  HtmlShotTest.php  RendererTest.php
tests/Unit/: NativeLibraryInstallerTest.php
tests/fonts/: README.md
