[package]
name = "takumi-php"
version = "0.1.0"
edition = "2021"
authors = ["Alessio Vertemati"]
license = "MIT"
description = "FFI layer exposing Takumi to PHP"

[lib]
name = "takumi_php"
crate-type = ["cdylib"]

[dependencies]
takumi = { version = "1.0.7", features = ["woff2", "woff"] }
parley = { version = "0.8", default-features = false }
scraper = "0.22"
ego-tree = "0.10"

[dev-dependencies]
image = "0.25"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
